--- a/CHANGELOG.yml
+++ b/CHANGELOG.yml
@@ -9,20 +9,8 @@ upcoming:
     - Embedded models view controller truncates long titles with ellipsis - sarah
     - Made a class for notification item views and added tests for WorksForYouVC - sarah
     - Made the favorites and works for you network models more thread-safe - sarah
-    - Most of the layout for the works for you view controller is in - maxim
-    - Added a switch between native and martsy works for you view - maxim
-    - Made the searchbar larger in fair views on iPhone - maxim
-    - Additional work on the auction title view - ash
-    - Quicksilver is now accessible to non-Eigen devs - orta
-    - Removes rotation support on refine auction listings view for iPhone - ash
-    - Developers can choose to have a custom url for their staging environment - orta
-    - Initial work on the Live Auctions view controller - orta
-    - AuctionVC supports before state - orta
-    - Added an option for Admins to visualize analytics - ani/alloy/orta
-    - Initial working structure for Live Auctions with stubbed data - orta
-    - Shows a lot of the main views on Live Auctions - orta
-    - Keep a papertrail of screen views that have slugs, which we can use to improve on-boarding in an upcoming version when we require sign-up. - alloy
-
+    - Giving feedback offers a context based on the top view controller - orta
+    
   notes:
     - Wrapped up all but the refine button occasionally tapping through QA items for the Native Auction Views - orta
 
@@ -31,8 +19,6 @@ releases:
     details: Auctions Overview + For You Native Views
 
     dev:
-      - Made a class for notification item views and added tests for WorksForYouVC - sarah
-      - Made the favorites and works for you network models more thread-safe - sarah
       - Most of the layout for the works for you view controller is in - maxim
       - Added a switch between native and martsy works for you view - maxim
       - Made the searchbar larger in fair views on iPhone - maxim
